--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -480,6 +480,7 @@ nav {
 div .titulo-3d {
     font-family: 'titulos', Arial, sans-serif;
     position: relative;
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
